--- a/README.org
+++ b/README.org
@@ -14,3 +14,5 @@ Emacs mode for Visual Studio Test Results Files (TRX)
 As per this Reddit discussion:
 
 - [[https://www.reddit.com/r/emacs/comments/1bavvhs/mode_for_running_net_c_unit_tests/][Mode for running .NET / C# unit tests]]
+
+See [[file:Research/notes.org][notes]].
