test data: add sample tests projects and agile notebook

--- a/README.org
+++ b/README.org
@@ -15,4 +15,8 @@ As per this Reddit discussion:
 
 - [[https://www.reddit.com/r/emacs/comments/1bavvhs/mode_for_running_net_c_unit_tests/][Mode for running .NET / C# unit tests]]
 
+* Content
+
+- Agile backlogs:
+  - Sprint 1
 See [[file:Research/notes.org][notes]].
