--- a/README.org
+++ b/README.org
@@ -18,5 +18,6 @@ As per this Reddit discussion:
 * Content
 
 - Agile backlogs:
-  - Sprint 1
+  - [[file:Doc/Timekeeping/sprint_backlog_01.org][Sprint 1]]
+
 See [[file:Research/notes.org][notes]].
